2009-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphcs.c (boundary):  Fix bug #2845874
	(Rotated xtics caused misplacement of explicit bmargin).

2009-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breaders.c (png_filetype_function df_libgd_get_pixel)
	src/breaders.h src/datafile.c (df_open df_readbinary):
	If gnuplot has been linked with libgd (to support gif/png/jpeg) then
	we might as well use its ability to read in png images as binary data.
	New binary option for use with either rgbimage or rgbalpha
		plot 'foo.png' binary filetype=png

	* src/datafile.c (plot_option_binary):  Fix the logic that checks for a
	default binary filetype if none is specified in the plot command.

	* docs/gnuplot.doc docs/plotstyles.gnu docs/bldg.png:
	Add a sample plot the uses rescaled png images as plot elements.

2009-08-26  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/canvas.trm: Remove EXPERIMENTAL flag from
	canvas and wxt terminals.

	* term/post.trm: Fix typos in version history

2009-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): The binary data syntax
	splot ... binary array=(x,y) 
	is very odd because it always fills in the z coordinate of each
	voxel with 0 rather than with the actual array value.  This makes a
	small amount of sense for IMAGE data, but makes the input mode useless
	for plotting a data surface from a binary array.  This patch changes
	the behaviour by loading the array value into z for non-image plots.

2009-08-19  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm:
	1) supports continuous colors (make_palette, set_color)
	2) supports fill patterns (filled_polygon)
	3) supports the density of solid fill (filled_polygon)
	4) adds TGIF_fillbox and TGIF_previous_palette (doing nothing)
	5) modifies two variable names (u* -> d*)
	6) swap point types 1 and 2 to match other terminals

2009-08-18  Ethan A Merritt  <merritt@u.washington.edu>
